2009-01-14  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/python/pybel.py split into pybel_py2.x.py, pybel_py3.x.py:
	Adding support for Python 3.
	* scripts/openbabel-python.i, scripts/python/examples/testpybel.py,
	scripts/python/setup.py, windows-vc2005/OBPythonOBF/setup.py: Adding
	support for Python 3.
	* windows-vc2005/OBPythonOBF/OBPythonOBF.vcproj: Moving to SWIG
	1.3.37 (need to specify -outdir).

2009-01-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/gzmatformat.cpp: Address PR#2056697 for Gaussian
	z-matrix with embedded numbers (no variables) or no "Variables:"
	line.

2009-01-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Address crash in SMILES import
	with chiral ring closures. ChiralSearch vectors were too
	small. Should address PR#2498047.

	* configure.in, scripts/Makefile.am: Check for javac and jar at
	configure time. Do not run them unless present. Solves PR#2426622.

2009-01-09  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.cpp,
	src/forcefields/forcefielduff.h: Add support for 5-coordinate
	and other unusual coordination environments (including lone pairs
	for hypervalent species). Not perfect, but much better than
	before.

	* src/formats/outformat.cpp: Add comments about single bonds and
	bond orders (which are followed by all QM output formats).

	* src/formats/gamessformat.cpp: Add patch from Albert DeFusco for
	GAMESS EFP fragments. PR#2484103.

2008-12-31  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/python/setup.py: Bump to 1.4
	* windows-vc2005/setenv.txt, windows-vc2005/OBPythonOBF/obpython.bat,
	setup.py, openbabel_postinstall.py (deleted), OBPythonOBF.vcproj: Bump
	to 1.4, make separate configurations for different Python versions,
	only install the .pyd and .py files

2008-12-30  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi: