@@ -195,7 +195,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					Description="Swigify"
-					CommandLine="swig -csharp -c++ -namespace OpenBabel -I&quot;../../src&quot; -I&quot;../../include&quot; -I&quot;..&quot; -o &quot;$(ProjectDir)\$(InputName)_wrap.cpp&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
+					CommandLine="swig -csharp -c++ -namespace OpenBabel -outdir . -I&quot;../../src&quot; -I&quot;../../include&quot; -I&quot;..&quot; -o &quot;$(ProjectDir)\$(InputName)_wrap.cpp&quot; &quot;$(InputPath)&quot;&#x0D;&#x0A;"
 					Outputs="$(ProjectDir)openbabel-csharp_wrap.cpp"
 				/>
 			</FileConfiguration>
